Fix just about all GUI compile errors.